# api-sys_produtos/app/Http/Controllers/ProdutoController.php
@@ -2,8 +2,16 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Categoria;
 use App\Models\Produto;
+use App\Rules\RuleRequired;
+use App\Rules\RuleStringMax;
+use App\Rules\RuleValidateDate;
+use App\Rules\RuleValuePositive;
+use App\Utils\Response;
 use Illuminate\Http\Request;
+use File;
+use Illuminate\Support\Facades\Storage;
 
 class ProdutoController extends Controller
 {
@@ -11,8 +19,8 @@ class ProdutoController extends Controller
     /**
      * Produtos Controller
      * @OA\Get(
-     *     path="/api/produto/show",
-     *     summary="Show Produto",
+     *     path="/api/produto/get",
+     *     summary="Get Produto",
      *     tags={"Produto"},
      *     @OA\Response(
      *         response=200,
@@ -21,8 +29,39 @@ class ProdutoController extends Controller
      * ),
      */
 
-    public function show(){
-        return "Olá mundo!";
+    public function get($id){
+        try {
+            $produto = Produto::find($id);
+            //---
+            return Response::successWithData("ok", [
+                'produto' => $produto
+            ]);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return Response::error($e->errors());
+        }
+    }
+
+    /**
+     * Produtos Controller
+     * @OA\Get(
+     *     path="/api/produto/all",
+     *     summary="All Produto",
+     *     tags={"Produto"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK"
+     *     )
+     * ),
+     */
+
+     public function all(){
+        try {
+            return Response::successWithData("ok", [
+                "produtos" => Produto::all()
+            ]);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return Response::error($e->errors());
+        }
     }
 
     /**
@@ -71,38 +110,114 @@ class ProdutoController extends Controller
 
     public function create(Request $request){
         try {
-            if($request->hasFile('image')){
-                // Get filename with the extension
-                $filenameWithExt = $request->file('image')->getClientOriginalName();
-                // Get just filename
-                $filename = pathinfo($filenameWithExt, PATHINFO_FILENAME);
-                // Get just ext
-                $extension = $request->file('image')->getClientOriginalExtension();
-                // Filename to store
-                $fileNameToStore= $filename.'_'.time().'.'.$extension;
-                // Upload Image
-                $path = $request->file('image')->storeAs('public/img', $fileNameToStore);
-            } else {
-                $fileNameToStore = 'noimage.png';
-            }
-            //save in database
-            $produto = Produto::create([
-                'name'            => $request->name,
-                'description'     => mb_strtolower($request->description),
-                'price'           => $request->price,
-                'date_expiration' => mb_strtolower($request->date_expiration),
-                'image'           => $fileNameToStore,
-                'id_categoria'    => $request->id_categoria
-            ]);
 
-            return response()->json([
-                "msg" => 'Produto adicionado com sucesso!',
-                "produto" => $produto,
-            ], 200);
+            $request->validate([
+                'name'            => [new RuleRequired, new RuleStringMax(50)],
+                'description'     => [new RuleRequired, new RuleStringMax(200)],
+                'price'           => [new RuleRequired, new RuleValuePositive],
+                'date_expiration' => [new RuleRequired, new RuleValidateDate],
+                'image'           => [new RuleRequired],
+                'id_categoria'    => [new RuleRequired],
+            ]);
+            //---
+            $existe = Categoria::find($request->id_categoria);
+            if($existe){
+                if($request->hasFile('image')){
+                    // pega o filename com a extensão
+                    $filenameWithExt = $request->file('image')->getClientOriginalName();
+                    // pega o filename sem extensão
+                    $filename = pathinfo($filenameWithExt, PATHINFO_FILENAME);
+                    // pega apenas a extensão
+                    $extension = $request->file('image')->getClientOriginalExtension();
+                    // Salva o filename com o time
+                    $fileNameToStore= $filename.'_'.time().'.'.$extension;
+                    // Sobe a imagem no servidor
+                    $path = $request->file('image')->storeAs('public/img', $fileNameToStore);
+                } else {
+                    $fileNameToStore = 'noimage.png';
+                }
+                //save in database
+                $produto = Produto::create([
+                    'name'            => $request->name,
+                    'description'     => mb_strtolower($request->description),
+                    'price'           => $request->price,
+                    'date_expiration' => mb_strtolower($request->date_expiration),
+                    'image'           => $fileNameToStore,
+                    'id_categoria'    => $request->id_categoria
+                ]);
+                //---
+                return Response::successWithData("Produto adicionado com sucesso!", [
+                    "produto" => $produto
+                ]);
+            }else{
+                return Response::error([
+                    'categoria' => 'essa categoria não existe'
+                ]);
+            }
         } catch (\Illuminate\Validation\ValidationException $e) {
-            return response()->json([
-                "erros" => $e->errors(),
-            ], 200);
+            return Response::error($e->errors());
+        }
+    }
+
+    public function update(Request $request){
+        try {
+
+            $request->validate([
+                'id'              => [new RuleRequired],
+                'name'            => [new RuleRequired, new RuleStringMax(50)],
+                'description'     => [new RuleRequired, new RuleStringMax(200)],
+                'price'           => [new RuleRequired, new RuleValuePositive],
+                'date_expiration' => [new RuleRequired, new RuleValidateDate],
+                'image'           => [new RuleRequired],
+                'id_categoria'    => [new RuleRequired],
+            ]);
+            //---
+            $produto = Produto::find($request->id);
+            if($produto){
+                $categoria = Categoria::find($request->id_categoria);
+                if($categoria){
+                    if($request->hasFile('image')){
+                        //pega o filename com a extensão
+                        $filenameWithExt = $request->file('image')->getClientOriginalName();
+                        // pega o filename sem extensão
+                        $filename = pathinfo($filenameWithExt, PATHINFO_FILENAME);
+                        // pega apenas a extensão
+                        $extension = $request->file('image')->getClientOriginalExtension();
+                        // Salva o filename com o time
+                        $fileNameToStore= $filename.'_'.time().'.'.$extension;
+                        // Sobe a imagem no servidor
+                        $path = $request->file('image')->storeAs('public/img', $fileNameToStore);
+                        //----------------------------------------------------------------------
+                        Storage::disk('public')->delete('img/'.$produto->image);
+                        //---
+                    } else {
+                        $fileNameToStore = 'noimage.png'; //$produto->image
+                    }
+                    //save in database
+                    Produto::where('id', $request->id )->update([
+                        'name'            => $request->name,
+                        'description'     => mb_strtolower($request->description),
+                        'price'           => $request->price,
+                        'date_expiration' => mb_strtolower($request->date_expiration),
+                        'image'           => $fileNameToStore,
+                        'id_categoria'    => $request->id_categoria
+                    ]);
+                    //---
+                    return Response::successWithData("Produto atualizado com sucesso!", [
+                        "produto" => Produto::find($request->id)
+                    ]);
+                }else{
+                    return Response::error([
+                        'categoria' => 'essa categoria não existe'
+                    ]);
+                }
+            }else{
+                return Response::error([
+                    'produto' => 'esse produto não existe'
+                ]);
+            }
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return Response::error($e->errors());
         }
     }
 }
